--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/AlbertLnz/node-testing-jest-supertest/issues"
   },
-  "homepage": "https://github.com/AlbertLnz/node-testing-jest-supertest#readme"
+  "homepage": "https://github.com/AlbertLnz/node-testing-jest-supertest#readme",
+  "dependencies": {
+    "express": "4.18.2"
+  }
 }
