--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/AlbertLnz/node-testing-jest-supertest#readme",
   "dependencies": {
     "express": "4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
