--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/AlbertLnz/node-testing-jest-supertest#readme",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
